--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
 </head>
 <body>
     <h1>:)-|<</h1>
+    <p class="desc">I like to do learn and do stuff</p>
+
+    <h2 class="music">music</h2>
+    <audio><source></audio>
+    <h2 class="prog">programming</h2>
+    <h3 class="art">art in general</h3>
+    <h4 class="work">work in general</h4>
+    <h5 class="gd">graphic design</h5>
+
+    <a href="mailto:kriep@proton.me">HMU</a>
 </body>
 </html>
