--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <h4 class="work">work in general</h4>
     <h5 class="gd">graphic design</h5>
 
+    <a href="https://www.youtube.com/@kriep">HMU</a>
     <a href="mailto:kriep@proton.me">HMU</a>
+
 </body>
 </html>
