--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 
     <a href="https://www.youtube.com/@kriep">HMU</a>
     <a href="mailto:kriep@proton.me">HMU</a>
-
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6vW1WpedCmV4gtOijSoQV3?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </body>
 </html>
