--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome </title>
+    <title>Welcome to my internet page</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
     <h1>:)-|<</h1>
-    <p class="desc">I like to do learn and do stuff</p>
+    <p class="desc">I like to exist in a peripheral of colors, enraged with the fury of the skies and clouds and everything in between</p>
 
     <h2 class="music">music</h2>
     <audio><source></audio>
