addded not working sound

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 </head>
 <body>
     <h1>:)-|<</h1>
-    <p class="desc">I like to exist in a peripheral of colors, enraged with the fury of the skies and clouds and everything in between</p>
+    <p class="desc">I like to exist in a peripheral of colors, enraged with the fury of the skies and clouds and everything in between heaven, earth and whatever the fuck you believe in</p>
 
     <h2 class="music">music</h2>
-    <audio><source></audio>
+    <audio src="02-Cymatics - BELL Vibrate (C)-240924_1929.wav" autoplay></audio>
     <h2 class="prog">programming</h2>
     <h3 class="art">art in general</h3>
     <h4 class="work">work in general</h4>
     <h5 class="gd">graphic design</h5>
-
-    <a href="https://www.youtube.com/@kriep">HMU</a>
+<p>in a world where ai and hate wants to kill us all, it is more important than ever to stay together and make reality a better place for all of us.</p>
+<div class="s"><div class="s"><audio src="anthem-001.wav" mediagroup="wav" loop autoplay></audio></div></div>
+<a href="https://www.youtube.com/@kriep">HMU</a>
     <a href="mailto:kriep@proton.me">HMU</a>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6vW1WpedCmV4gtOijSoQV3?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    
 </body>
 </html>
