--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <p class="desc">I like to exist in a peripheral of colors, enraged with the fury of the skies and clouds and everything in between heaven, earth and whatever the fuck you believe in</p>
 
     <h2 class="music">music</h2>
+    <a href="./content/music.html">learn more</a>
     <audio src="02-Cymatics - BELL Vibrate (C)-240924_1929.wav" autoplay></audio>
     <h2 class="prog">programming</h2>
     <h3 class="art">art in general</h3>
     <h4 class="work">work in general</h4>
     <h5 class="gd">graphic design</h5>
-<p>in a world where ai and hate wants to kill us all, it is more important than ever to stay together and make reality a better place for all of us.</p>
-<div class="s"><div class="s"><audio src="anthem-001.wav" mediagroup="wav" loop autoplay></audio></div></div>
+
+<div class="s"><div class="s"><audio src="anthem-001.wav"></audio></div></div>
 <a href="https://www.youtube.com/@kriep">HMU</a>
     <a href="mailto:kriep@proton.me">HMU</a>
     
