--- a/content/music.html
+++ b/content/music.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8" />
     <title>Always pay attention to titles</title>
 </head>
 <body>
-    <img src="2024-12-03_23.45.32.png">
+    <img src="2024-12-03_23.45.32.png" draggable="true">
     <div class="jesse"> there is no going back now.</div>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Oqx2dJcl1a0?si=so0gJSwv20o_8O3y&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5kcg-nDBvOU?si=Y_iH7KdT74s95K6X&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<a href="https://r.mtdv.me/videos/nf_realmusic">i am talented.</a>
 </body>
 </html>
