--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <h3 class="art">art in general</h3>
     <h4 class="work">work in general</h4>
     <h5 class="gd">graphic design</h5>
+    <img src="content/first.svg">
+    <a href="content/graphic_design.html">More goodness</a>
 
 <div class="s"><div class="s"><audio src="anthem-001.wav"></audio></div></div>
 <a href="https://www.youtube.com/@kriep">HMU</a>
