Added graphic section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
+    <img src="content/second.png" width="100%">
+    
     <h1>:)-|<</h1>
     <p class="desc">I like to exist in a peripheral of colors, enraged with the fury of the skies and clouds and everything in between heaven, earth and whatever the fuck you believe in</p>
 
@@ -19,7 +21,6 @@
     <h3 class="art">art in general</h3>
     <h4 class="work">work in general</h4>
     <h5 class="gd">graphic design</h5>
-    <img src="content/first.svg">
     <a href="content/graphic_design.html">More goodness</a>
 
 <div class="s"><div class="s"><audio src="anthem-001.wav"></audio></div></div>
