--- a/content/graphic_design.html
+++ b/content/graphic_design.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <img src="first.svg" draggable="true">
+    <img src="second.png" draggable="true">
     <div class="jesse"> I make design.</div>
     
 </body>
