added twitch iframe

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <h4 class="work">work in general</h4>
     <h5 class="gd">graphic design</h5>
     <a href="content/graphic_design.html">More goodness</a>
+    <h6>Fun and games</h6>
+    <iframe src="https://www.twitch.tv/kriepeer_" width="420" height="88"></iframe>
 
 <div class="s"><div class="s"><audio src="anthem-001.wav"></audio></div></div>
 <a href="https://www.youtube.com/@kriep">HMU</a>
