added expert syndrome paragraph

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 <div class="s"><div class="s"><audio src="anthem-001.wav"></audio></div></div>
 <a href="https://www.youtube.com/@kriep">HMU</a>
     <a href="mailto:kriep@proton.me">HMU</a>
-    
+    <h1>Visit other websites:</h1>
+    <a href="https://mcpedl.com/user/kriepeer/">mcpedl</a>
+    <h3>The expert syndrome</h3>
+    <p>It all starts when you step outside your comfort zone to learn a new skill. You make something basic and become satisfied with it. The satisfaction gives you motivation to get better, and you become proud of your own hard work. Then you downplay your old work to furnish the new work. You can make money by pwople in the first phase payingyou to get to the second phase.
+        When you’re lower down, this hurt can drive you to impove in order to “prove them wrong”. When that happens, you can often become more proud and satisfied when you “make it” too.
+        </p>
 </body>
 </html>
