--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <img src="content/second.png" width="100%">
     
     <h1>:)-|<</h1>
+    <a>hero page hero page hero page</a>
     <p class="desc">I like to exist in a peripheral of colors, enraged with the fury of the skies and clouds and everything in between heaven, earth and whatever the fuck you believe in</p>
 
     <h2 class="music">music</h2>
